--- a/CodeBlocks/LibMan/LibMan.cbp
+++ b/CodeBlocks/LibMan/LibMan.cbp
@@ -31,10 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="addBook.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="main.h" />
 		<Unit filename="splash.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
